# dresscode

./: MANIFEST.in  README.md  setup.cfg
docs/reference/: README.md
docs/reference/content/: dresscode.__init__.md  dresscode.__main__.md  dresscode.app.md  dresscode.component.__init__.md  dresscode.component.button.md  dresscode.component.checkbutton.md  dresscode.component.dropdown_list.md  dresscode.component.editor.md  dresscode.component.entry.md  dresscode.component.image.md  dresscode.component.label.md  dresscode.component.path_entry.md  dresscode.component.radiobutton.md  dresscode.component.space.md  dresscode.component.spinbox.md  dresscode.component.table.md  dresscode.constant.md  dresscode.hooking.__init__.md  dresscode.hooking.ante_build_hook.md  dresscode.hooking.ante_release_hook.md  dresscode.hooking.post_build_hook.md  dresscode.hooking.post_release_hook.md  dresscode.page.md
dresscode/: .private  __init__.py  __main__.py  app.py  constant.py  exception.py  page.py
dresscode/app/: __init__.py
dresscode/component/: __init__.py  button.py  checkbutton.py  choice.py  dropdown_list.py  editor.py  entry.py  image.py  label.py  optionmenu.py  path_entry.py  radiobutton.py  space.py  spinbox.py  table.py
dresscode/error/: __init__.py
dresscode/page/: __init__.py
dresscode/pyrustic_data/: build_report.json  hooking.json  release_info.json
dresscode/pyrustic_data/backstage/data/: github_release_form.json
dresscode/pyrustic_data/backstage/report/: build_report.json
