[metadata]
name = dresscode
version = file: VERSION
url = https://github.com/pyrustic/dresscode
author = Pyrustic Evangelist
author_email = pyrustic@protonmail.com
maintainer = Pyrustic Evangelist
maintainer_email = pyrustic@protonmail.com
description = Dress up your code with a beautiful graphical user interface !
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
keywords =
    gui
    productivity
    framework
    python
    pyrustic
    tkinter
    desktop-application
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.5
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    pyrustic

[options.entry_points]
console_scripts =
    dresscode = dresscode.__main__:main
